// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasForm should render 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-test|route.from.steps.1.choice.when.0.steps.0.log"
              src=""
            />
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              Logger
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <form
        class="pf-v6-c-form kaoto-form kaoto-form__label"
        novalidate=""
      >
        <div
          class="pf-v6-c-form__group"
          data-testid="#.message__field-wrapper"
        >
          <div
            class="pf-v6-c-form__group-label"
          >
            <label
              class="pf-v6-c-form__label"
              for="#.message"
            >
              <span
                class="pf-v6-c-form__label-text"
              >
                Message
              </span>
              <span
                aria-hidden="true"
                class="pf-v6-c-form__label-required"
              >
                 
                *
              </span>
            </label>
              
            <span
              class="pf-v6-c-form__group-label-help"
            >
              <div
                style="display: contents;"
              >
                <span
                  aria-disabled="false"
                  aria-label="More info for Message field"
                  class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  role="button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </span>
          </div>
          <div
            class="pf-v6-c-form__group-control"
          >
            <div
              class="pf-v6-c-text-input-group"
            >
              <div
                aria-describedby="#.message-popover"
                class="pf-v6-c-text-input-group__main"
                id="#.message"
              >
                <span
                  class="pf-v6-c-text-input-group__text"
                >
                  <input
                    aria-label="Message"
                    class="pf-v6-c-text-input-group__text-input"
                    name="#.message"
                    role="textbox"
                    type="text"
                    value="We got a one."
                  />
                </span>
              </div>
              <div
                class="pf-v6-c-text-input-group__utilities"
              >
                <button
                  aria-disabled="false"
                  aria-label="Clear message field"
                  class="pf-v6-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-3"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  data-testid="#.message__clear"
                  title="Clear message field"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 352 512"
                      width="1em"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="pf-v6-c-card kaoto-form kaoto-form__empty"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        data-testid="no-field-found"
        id=""
      >
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-alert pf-m-info"
            data-ouia-component-id="OUIA-Generated-Alert-info-1"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Info alert:
              </span>
              No Required fields found
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              No field found matching this criteria. Please switch to the
               
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="All"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  <b>
                    All
                  </b>
                </span>
              </button>
               
              tab.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema and no definition is available 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-5"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              Route
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-5"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-6"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                >
                  null

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-2"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema is available 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-3"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              Route
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-4"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                />
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-1"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
